--- a/backend/templates/layouts/base.html.twig
+++ b/backend/templates/layouts/base.html.twig
@@ -9,7 +9,7 @@
     />
     <link
             rel="icon"
-            href="{{ asset('assets/img/kaiadmin/favicon.ico') }}"
+            href="{{ asset('assets/img/logos/favicon.ico') }}"
             type="image/x-icon"
     />
 
@@ -37,6 +37,8 @@
     <link rel="stylesheet" href="{{ asset('assets/css/bootstrap.min.css') }}" />
     <link rel="stylesheet" href="{{ asset('assets/css/plugins.min.css') }}" />
     <link rel="stylesheet" href="{{ asset('assets/css/kaiadmin.min.css') }}" />
+    <link rel="stylesheet" href="{{ asset('assets/css/sweetalert2.min.css') }}" />
+    <link rel="stylesheet" href="{{ asset('assets/css/flatpickr.min.css') }}" />
     <link rel="stylesheet" href="{{ asset('assets/css/custom.css') }}" />
     {% block stylesheet %}{% endblock %}
 </head>
@@ -49,7 +51,7 @@
             <div class="logo-header" data-background-color="dark">
                 <a href="{{ path('app_dashboard') }}" class="logo">
                     <img
-                            src="{{ asset('assets/img/kaiadmin/logo_light.svg') }}"
+                            src="{{ asset('assets/img/logos/logo_light.svg') }}"
                             alt="navbar brand"
                             class="navbar-brand"
                             height="20"
@@ -80,6 +82,7 @@
                             <p>Panel de control</p>
                         </a>
                     </li>
+                    {% if is_granted('ROLE_ADMIN') %}
                     <li class="nav-section">
                         <span class="sidebar-mini-icon">
                           <i class="fa fa-ellipsis-h"></i>
@@ -94,6 +97,7 @@
                             <p>Usuarios</p>
                         </a>
                     </li>
+                    {% endif %}
                 </ul>
             </div>
         </div>
@@ -107,7 +111,7 @@
                 <div class="logo-header" data-background-color="dark">
                     <a href="index.html" class="logo">
                         <img
-                                src="assets/img/kaiadmin/logo_light.svg"
+                                src="{{ asset('assets/img/logos/logo_light.svg') }}"
                                 alt="navbar brand"
                                 class="navbar-brand"
                                 height="20"
@@ -138,25 +142,23 @@
                         <li class="nav-item topbar-icon dropdown hidden-caret">
                             <a
                                     class="nav-link"
-                                    data-bs-toggle="dropdown"
                                     href="{{ path('app_tickets_list') }}"
-                                    aria-expanded="false"
                             >
-                                <i class="fas fa-exclamation-circle"></i>
+                                <i class="fas fa-headset"></i>
                             </a>
                         </li>
 
                         <li class="nav-item topbar-user dropdown hidden-caret">
                             <a
-                                    class="dropdown-toggle profile-pic"
+                                    class="dropdown-toggle text-dark"
                                     data-bs-toggle="dropdown"
                                     href="#"
                                     aria-expanded="false"
                             >
                                 <span class="profile-username">
-                      <span class="op-7 fs-4">Bienvenido de nuevo,</span>
-                      <span class="fw-bold fs-2">{{ app.user.name }} {{ app.user.surname1 }} {{ app.user.surname2 }}</span>
-                    </span>
+                                  <span class="op-7 fs-4">Bienvenido de nuevo,</span>
+                                  <span class="fw-bold fs-2">{{ app.user.name }} {{ app.user.surname1 }} {{ app.user.surname2 }}</span>
+                                </span>
                             </a>
                             <ul class="dropdown-menu dropdown-user animated fadeIn">
                                 <div class="dropdown-user-scroll scrollbar-outer">
@@ -214,6 +216,7 @@
 </div>
 <!--   Core JS Files   -->
 <script src="{{ asset('assets/js/core/jquery-3.7.1.min.js') }}"></script>
+<script src="{{ asset('assets/js/core/popper.min.js') }}"></script>
 <script src="{{ asset('assets/js/core/bootstrap.min.js') }}"></script>
 
 <!-- jQuery Scrollbar -->
@@ -224,7 +227,13 @@
 <script src="{{ asset('assets/js/plugin/bootstrap-notify/bootstrap-notify.min.js') }}"></script>
 
 <!-- Sweet Alert -->
-<script src="{{ asset('assets/js/plugin/sweetalert/sweetalert.min.js') }}"></script>
+<script src="{{ asset('assets/js/plugin/sweetalert/sweetalert2.all.min.js') }}"></script>
+
+<!-- Select2 -->
+<script src="{{ asset('assets/js/plugin/select2/select2.full.min.js') }}"></script>
+
+<!-- Select2 -->
+<script src="{{ asset('assets/js/plugin/flatpickr/flatpickr.js') }}"></script>
 
 <!-- Kaiadmin JS -->
 <script src="{{ asset('assets/js/kaiadmin.min.js') }}"></script>
@@ -238,18 +247,19 @@
         {% set alertColor = '' %}
         {% set alertIcon = '' %}
         {% set alertTitle = '' %}
+
         {% if label == 'success' %}
-        {% set alertColor = 'success' %}
-        {% set alertTitle = 'Correcto' %}
-        {% set alertIcon = 'fa fa-bell' %}
+            {% set alertColor = 'success' %}
+            {% set alertTitle = 'Correcto' %}
+            {% set alertIcon = 'fa fa-check' %}
         {% elseif label == 'error' %}
-        {% set alertColor = 'danger' %}
-        {% set alertTitle = 'Error' %}
-        {% set alertIcon = 'fa fa-bell' %}
+            {% set alertColor = 'danger' %}
+            {% set alertTitle = 'Error' %}
+            {% set alertIcon = 'fa fa-exclamation' %}
         {% elseif label == 'warning' %}
-        {% set alertColor = 'warning' %}
-        {% set alertTitle = 'Advertencia' %}
-        {% set alertIcon = 'fa fa-bell' %}
+            {% set alertColor = 'warning' %}
+            {% set alertTitle = 'Advertencia' %}
+            {% set alertIcon = 'fa fa-triangle-exclamation' %}
         {% endif %}
 
         $.notify({
