--- a/backend/templates/security/login.html.twig
+++ b/backend/templates/security/login.html.twig
@@ -37,7 +37,7 @@
                         </div>
 
                         <p class="text-end">
-                            <a  href="{{ path('app_register_render') }}">¿Has olvidado la contraseña?</a>
+                            <a  href="{{ path('app_recover_password_render') }}">¿Has olvidado la contraseña?</a>
                         </p>
 
                         <button class="w-100 btn btn-primary">Iniciar sesión</button>
@@ -45,7 +45,7 @@
                     </form>
                 </div>
                 <div class="card-footer">
-                    <button class="w-100 btn btn-info mt-2 mb-2">Registro</button>
+                    <a href="{{ path('app_register_render') }}" class="w-100 btn btn-info mt-2 mb-2">Registro</a>
                 </div>
             </div>
         </div>
