--- a/backend/templates/user/index.html.twig
+++ b/backend/templates/user/index.html.twig
@@ -73,7 +73,7 @@
             <!--begin::Table container-->
             <div class="table-responsive">
                 <!--begin::Table-->
-                <table id="kt_project_users_table" class="table table-row-bordered table-row-dashed gy-4 align-middle fw-bold">
+                <table class="table table-row-bordered table-row-dashed gy-4 align-middle fw-bold">
                     <thead class="fs-7 text-gray-700 text-uppercase">
                     <tr>
                         <th class="min-w-150px">
@@ -148,7 +148,7 @@
         </div>
         <!--end::Card body-->
 
-        <div class="card-footer pt-0">
+        <div class="card-footer pt-2">
             <div class="navigation">
                 {{ knp_pagination_render(users) }}
             </div>
