--- a/backend/templates/user/edit.html.twig
+++ b/backend/templates/user/edit.html.twig
@@ -28,6 +28,16 @@
 
 {% block content %}
 
+    <div class="col-12 row ms-0 me-0 mb-2">
+        <div class="col-6 ">
+        </div>
+
+        <div class="col-6 text-end">
+            <a href="{{ path('app_users_list') }}" class="btn btn-secondary">Listado de Usuarios</a>
+            <a href="{{ path('app_users_render_show', {'id': user.id}) }}" class="btn btn-primary">Ver Usuario</a>
+        </div>
+    </div>
+
     <div class="card card-flush w-100">
         <form action="{{ path('app_users_process_edit', {'id': user.id}) }}" method="post">
 
@@ -76,7 +86,7 @@
 
                 <div class="col-6 mb-3">
                     <label>Roles <span class="text-danger">*</span></label>
-                    <select class="form-control" name="roles[]" data-control="select2" multiple required>
+                    <select class="form-select form-control" name="roles[]" data-control="select2" multiple required>
                         {% for role in roles %}
                             <option value="{{ role.id }}" {% if role.id in user.getRolesIds() %}selected="selected"{% endif %}>{{ role.label }}</option>
                         {% endfor %}
@@ -86,7 +96,7 @@
 
                 <div class="col-6 mb-3">
                     <label>Estado <span class="text-danger">*</span></label>
-                    <select class="form-control" name="enabled" data-control="select2" required>
+                    <select class="form-select form-control" name="enabled" data-control="select2" required>
                         <option value="1" {% if user.enabled %}selected="selected"{% endif %} >Activo</option>
                         <option value="0" {% if not user.enabled %}selected="selected"{% endif %} >Inactivo</option>
                     </select>
